# dggs_data_warehouse

./: .gitignore  README.md  birdseye.yml  config.sh
air_quality_data_experiments/: README.md  generate_dataset.py  load_data.sh
air_quality_data_experiments/config/db/clickhouse/: datetime.sql
air_quality_data_experiments/queries/clickhouse/: kang_e1_upper.sql  kang_e2_upper.sql  kang_e3_upper.sql
air_quality_data_experiments/queries/duckdb/: kang_e1_upper.sql  kang_e2_upper.sql  kang_e3_upper.sql
air_quality_data_experiments/queries/postgres/: kang_e1_upper.sql  kang_e2_upper.sql  kang_e3_upper.sql
config/: env.sh  sys.conf
config/db/clickhouse/: schema.sql
config/db/duckdb/: schema.sql
config/db/postgresql/: schema.sql
datacube/: README.md  cube_sql.py  example.csv  example.json  interface.py  operations.py  utils.py
reusable_etl_functionality/: README.md  setup.py
reusable_etl_functionality/reusable_etl_functionality/: functionality.py
spherical/: Cargo.toml
spherical/spherical/: Cargo.toml
spherical/spherical/src/: h3_ops.rs  h3sample.rs  lib.rs  main.rs  raster_ds.rs
spherical/spherical/src/h3ds/: dim.rs  dim_reader.rs  h3ds.rs  h3ds_reader.rs
spherical/spherical_import/: Cargo.toml
spherical/spherical_import/src/: import.rs  main.rs
spherical/spherical_import/src/import/: clickhouse.rs  duckdb.rs  general.rs  postgresql.rs
spherical/spherical_pgx/: Cargo.toml
spherical/spherical_pgx/src/: lib.rs
spherical/spherical_py/: Cargo.toml
spherical/spherical_py/src/: etl.rs  lib.rs  pixelwise.rs  sample.rs
traffic_monitoring_example/: README.md  all_data_import.sh  all_data_process.sh
traffic_monitoring_example/config/virtualenv/: requirements.txt
traffic_monitoring_example/scripts/: config.sh
traffic_monitoring_example/scripts/FRANCE_AADT/: extract_transform.py
traffic_monitoring_example/scripts/LANDSCAN/: extract_transform.py  extract_transform_2.py
traffic_monitoring_example/scripts/LSTW/: extract_transform_traffic.py  extract_transform_weather.py
traffic_monitoring_example/scripts/MARYLAND_AADT/: extract_transform.py
traffic_monitoring_example/scripts/NEWYORK_AADT/: extract_transform.py
traffic_monitoring_example/scripts/UK_AADT/: extract_transform.py
traffic_monitoring_example/tests/: README.md
traffic_monitoring_example/tests/etl-tests/: README.md  clickhouse_test_landscan_city.py  clickhouse_test_traffic.py  clickhouse_test_uk_aadt.py  clickhouse_test_weather.py
traffic_monitoring_example/visualizations/: GBR_aadt.csv  aadt_viz_all.py  aadt_viz_country.py  full_country_landscan_viz.py  full_country_traffic_event_viz.py  landscan_ny_out.csv  landscan_viz_ny.py  traffic_landscan_viz.py  traffic_ny_out.csv
(+23 files in other folders)
