[package]
name = "spherical"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
polars-lazy="0.27.2"
h3o = "0.3.0"
polars = {version="0.27.2", features = ["decompress", "dtype-struct"]}
serde_json = "1.0.93"
rand = "0.8.5"
numpy = "0.18.0"
geo = "0.23.1"
float-ord = "0.3.2"