[package]
name = "spherical_import"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
edition = "2021"
name = "spherical_import"
path = "src/main.rs"

[lib]
name="spherical_import"
path = "src/lib.rs"

[dependencies]
postgres = { version = "^0.19.4", features = ["with-serde_json-1", "with-chrono-0_4"] }
clickhouse = { version = "0.11.3", features = ["uuid"] }
duckdb = { version = "0.7.1", features = ["uuid", "bundled"] }
csv = "1.2.0"
url = "2.3.1"
chrono = "0.4.23"
serde = { version = "1.0.152", features=["derive"] }
serde_json = { version ="1.0.93", features=["raw_value"] }
regex = "1.7.1"
thousands = "0.2.0"
futures = "0.3.26"
uuid = { version = "1.3.0", features = ["v4", "serde"] }
tokio = { version = "1.26.0",  features = ["rt-multi-thread","process"] }
clap = { version = "4.1.11", features = ["derive"] }
rpassword = "7.2.0"
format-sql-query = "0.4.0"
indicatif = "0.17.3"
